[tool.poetry]
name = "token-doctor"
version = "0.1.0"
description = "Plugin-based CLI to debug API tokens, track platform changes, and generate calendar alerts"
readme = "README.md"
license = "MIT"
authors = ["token-doctor contributors"]
packages = [{ include = "token_doctor" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
typer = "^0.12.0"
httpx = "^0.27.0"
feedparser = "^6.0.11"
keyring = "^25.0.0"
icalendar = "^5.0.11"
pydantic = "^2.0.0"
beautifulsoup4 = { version = "^4.12.0", optional = true }
rich = { version = "^13.0.0", optional = true }

[tool.poetry.extras]
scrape = ["beautifulsoup4"]
rich = ["rich"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.4.0"
mypy = "^1.11.0"
pre-commit = "^3.6.0"
respx = "^0.21.0"
detect-secrets = "^1.4.0"

[tool.poetry.scripts]
token-doctor = "token_doctor.cli.main:app"

[tool.poetry.plugins."token_doctor.plugins"]
github = "token_doctor.platforms.github:plugin"
google_ads = "token_doctor.platforms.google_ads:plugin"
meta_marketing = "token_doctor.platforms.meta_marketing:plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B904", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"token_doctor/cli/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
